--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MODS=9198******* //Add your whatsapp number with country code
+MODS=2349159807687 //Add your whatsapp number with country code
 MONGODB=mongodb+srv://********** //Add Your Mongodb
 PREFIX=!@$%^&*() //Any any one chracter
-SESSION_ID=NEZUKO //ADD YOUR SESSION ID
+SESSION_ID=me //ADD YOUR SESSION ID
 GOOGLE_API=your api key //Get api key from console.developers.google.com
 WEATHER_API=your api key //Get api key from weatherapi.com
 MAL_USERNAME=your Myanimelist username or use PratyushOP if you you don't wanna use yours
