--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 MODS=2349159807687, 27660286904
 MONGODB=mongodb+srv://********** //Add Your Mongodb
-PREFIX=!@$%^&*() //Any any one chracter
+PREFIX= .
 SESSION_ID= me 
 GOOGLE_API=your api key //Get api key from console.developers.google.com
 WEATHER_API=your api key //Get api key from weatherapi.com
