--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MODS=2349159807687, 27660286904
+MODS=27660286904, 2349159807687 //Add your whatsapp number with country code
 MONGODB=mongodb+srv://********** //Add Your Mongodb
-PREFIX= .
-SESSION_ID= me 
+PREFIX=!@$%^&*() //Any any one chracter
+SESSION_ID=NEZUKO //ADD YOUR SESSION ID
 GOOGLE_API=your api key //Get api key from console.developers.google.com
 WEATHER_API=your api key //Get api key from weatherapi.com
 MAL_USERNAME=your Myanimelist username or use PratyushOP if you you don't wanna use yours
